# estudo_banco_de_dados

./: .gitignore  README.md  banco_estudo.py  main.py  pyproject.toml  readme.md
application/: dtos.py
application/interfaces/: i_gasto_repository.py
application/services/: gasto_service.py
configs/: config.py
domain/: entities.py  exceptions.py  value_objects.py
infrastructure/orm/: database.py  models.py
infrastructure/repositories/: gasto_repository.py
models/: schemas.py
presentation/cli/: commands.py  controller.py  view.py
presentation/strategies/: busca_strategies.py
shared/: event_bus.py
