[project]
name = "banco_dados"
version = "0.1.0"
description = "Projeto para estudo sobre banco de dados"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
]
 
[tool.taskipy.tasks]

# ---------- Execução / utilidades ----------
dev      = "uv run banco_estudo.py"
